# DTeam-django-practical-test

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
CVProject/: celery.py  settings.py  urls.py
apps/audit/: middleware.py  models.py  urls.py  views.py
apps/main/: send_pdf_email_task.py  serializers.py  urls.py  views.py
apps/settingsinfo/: urls.py
apps/templates/main/: cv_detail.html
apps/templates/settingsinfo/: settings.html
apps/tests/: test_api.py  test_logging.py  test_views.py
audit/: middleware.py  urls.py  views.py
fixtures/: cv_data.json
main/: models.py  serializers.py  urls.py  views.py
templates/main/: base.html  cv_detail.html  cv_list.html
tests/: test_api.py  test_logging.py  test_views.py
utils/: html_to_pdf.py  languages.py  text_from_cv.py  translate.py
